# adversarium

./: .gitignore  README.md  pyproject.toml
aces/: __init__.py  config.py
aces/attack/: genome.py  operators.py  techniques.py
aces/defense/: detection.py  genome.py  operators.py
aces/evolution/: coevolution.py  metrics.py  population.py
aces/narration/: llm_narrator.py
aces/network/: assets.py  graph.py  topology.py
aces/simulation/: engine.py  scoring.py  state.py
aces/visualization/: dashboard.py
aces/web/: server.py
examples/: analyze_results.py  run_basic.py  run_server.py  run_with_narration.py
tests/: test_attack_genome.py  test_coevolution.py  test_defense_genome.py  test_network.py  test_simulation.py  test_techniques.py
topologies/: corporate_medium.json
